# cpp-state-space-controller

./: CMakeLists.txt  Documentation.html  Doxyfile  HOWTO  LICENSE  README.md  TODO  WORKSPACE_USE  howto-compil-scripts  mainpage.dox
documentation/html/: QSMatrix_8cpp.html  QSMatrix_8cpp__dep__incl.dot  QSMatrix_8cpp__dep__incl.md5  QSMatrix_8cpp__incl.dot  QSMatrix_8cpp__incl.md5  QSMatrix_8h.html  QSMatrix_8h__dep__incl.dot  QSMatrix_8h__dep__incl.md5  QSMatrix_8h__incl.dot  QSMatrix_8h__incl.md5  QSMatrix_8h_source.html  annotated.html  classQSMatrix-members.html  classQSMatrix.html  classStateSpaceController-members.html  classStateSpaceController.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  example__StateSpaceController_8cpp.html  example__StateSpaceController_8cpp__incl.dot  example__StateSpaceController_8cpp__incl.md5  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  stateSpaceController_8cpp.html  stateSpaceController_8cpp__dep__incl.dot  stateSpaceController_8cpp__dep__incl.md5  stateSpaceController_8cpp__incl.dot  stateSpaceController_8cpp__incl.md5  stateSpaceController_8h.html  stateSpaceController_8h__dep__incl.dot  stateSpaceController_8h__dep__incl.md5  stateSpaceController_8h__incl.dot  stateSpaceController_8h__incl.md5  (+1 more)
src/: QSMatrix.cpp  QSMatrix.h  example_StateSpaceController.cpp  example_ssController.cpp  ssController.cpp  ssController.h  stateSpaceController.cpp  stateSpaceController.h
workspace/: build.sh  build_exec.sh  clean.sh  clean_makefiles.sh  exec.sh
(+51 files in other folders)
